Updated Imksav details for OurTeams

--- a/index.html
+++ b/index.html
@@ -228,52 +228,61 @@
 					</div>
 				</div>
 			</div>
-
 			<div class="gallery-list row">
-				<div class="col-md-4 col-sm-6 gallery-grid gal_a">
+				<div class="col-md-4 col-sm-6 gallery-grid gal_a gal_c gal_d gal_e gal_f gal_g gal_h">
 					<div class="gallery-single fix">
-						<img src="uploads/img-1.jpg" class="img-fluid" alt="Image">
+						<img src="uploads/imksav.jpg" class="img-fluid" alt="Image">
 						<div class="img-overlay">
-							<a href="uploads/img-1.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
-									class="fa fa-picture-o"></i></a>
+							<a href="uploads/imksav.jpg" data-rel="prettyPhoto[gal]"
+								class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
 						</div>
 					</div>
 				</div>
-
-				<div class="col-md-4 col-sm-6 gallery-grid gal_b gal_c gal_d gal_e gal_f gal_h">
-					<div class="gallery-single fix">
-						<img src="uploads/img-2.jpg" class="img-fluid" alt="Image">
-						<div class="img-overlay">
-							<a href="uploads/img-2.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
-									class="fa fa-picture-o"></i></a>
+				<div class="gallery-list row">
+					<div class="col-md-4 col-sm-6 gallery-grid gal_a">
+						<div class="gallery-single fix">
+							<img src="uploads/img-1.jpg" class="img-fluid" alt="Image">
+							<div class="img-overlay">
+								<a href="uploads/img-1.jpg" data-rel="prettyPhoto[gal]"
+									class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="col-md-4 col-sm-6 gallery-grid gal_c gal_d gal_g">
-					<div class="gallery-single fix">
-						<img src="uploads/img-3.jpg" class="img-fluid" alt="Image">
-						<div class="img-overlay">
-							<a href="uploads/img-3.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
-									class="fa fa-picture-o"></i></a>
+					<div class="col-md-4 col-sm-6 gallery-grid gal_b gal_c gal_d gal_e gal_f gal_h">
+						<div class="gallery-single fix">
+							<img src="uploads/img-2.jpg" class="img-fluid" alt="Image">
+							<div class="img-overlay">
+								<a href="uploads/img-2.jpg" data-rel="prettyPhoto[gal]"
+									class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="col-md-4 col-sm-6 gallery-grid gal_d">
-					<div class="gallery-single fix">
-						<img src="uploads/img-4.jpg" class="img-fluid" alt="Image">
-						<div class="img-overlay">
-							<a href="uploads/img-4.jpg" data-rel="prettyPhoto[gal]" class="hoverbutton global-radius"><i
-									class="fa fa-picture-o"></i></a>
+					<div class="col-md-4 col-sm-6 gallery-grid gal_c gal_d gal_g">
+						<div class="gallery-single fix">
+							<img src="uploads/img-3.jpg" class="img-fluid" alt="Image">
+							<div class="img-overlay">
+								<a href="uploads/img-3.jpg" data-rel="prettyPhoto[gal]"
+									class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							</div>
 						</div>
 					</div>
+
+					<div class="col-md-4 col-sm-6 gallery-grid gal_d">
+						<div class="gallery-single fix">
+							<img src="uploads/img-4.jpg" class="img-fluid" alt="Image">
+							<div class="img-overlay">
+								<a href="uploads/img-4.jpg" data-rel="prettyPhoto[gal]"
+									class="hoverbutton global-radius"><i class="fa fa-picture-o"></i></a>
+							</div>
+						</div>
+					</div>
+
+
 				</div>
-
-
 			</div>
 		</div>
-	</div>
 	</div>
 	<div id="about" class="section wb">
 		<div class="container">
